<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FakeAesthetic</string>
    <string name="welcome">Welcome to FakeAesthetic</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="logout">Logout</string>
    <string name="post_image">Post Image</string>
</resources>